# stellarium

./: .bzrignore  .travis.yml  CMakeLists.txt
data/: default_config.ini.cmake  ssystem_major.ini  ssystem_minor.ini
data/gui/: nightStyle.css  normalStyle.css
data/shaders/: xyYToRGB.glsl
debian/: changelog  control  copyright  gbp.conf  menu  rules  stellarium-data.install  stellarium-data.links  stellarium-data.lintian-overrides  stellarium.install  watch
debian/patches/: fix_ftbfs_armhf_qt5.4.diff  release.diff  series  translation.diff
debian/source/: lintian-overrides
guide/: version.tex
ngccat_test/: ngccat.cpp  ngccat_test.pro
plugins/: CMakeLists.txt
plugins/MeteorShowers/resources/: showers.json
plugins/NavStars/src/: NavStars.cpp
plugins/Observability/src/gui/: ObservabilityDialog.ui
plugins/Oculars/src/: Oculars.cpp
plugins/Oculars/src/gui/: OcularDialog.cpp  OcularDialog.hpp
plugins/PrintSky/src/: PrintSky.cpp  PrintSky.hpp
plugins/PrintSky/src/gui/: PrintSkyDialog.cpp
plugins/Satellites/src/: Satellite.cpp
plugins/Satellites/src/gui/: SatellitesDialog.cpp  SatellitesDialog.hpp  SatellitesImportDialog.cpp  SatellitesImportDialog.hpp
plugins/SolarSystemEditor/src/: SolarSystemEditor.cpp
plugins/SolarSystemEditor/src/gui/: MpcImportWindow.cpp  MpcImportWindow.hpp
plugins/TelescopeControl/: CMakeLists.txt  ChangeLog  Doxyfile  Telescope properties JSON format.txt
plugins/TelescopeControl/resources/: device_models.json  help.utf8
plugins/TelescopeControl/src/: CMakeLists.txt  TelescopeControl.cpp  TelescopeControl.hpp  TelescopeControlGlobals.hpp
plugins/TelescopeControl/src/clients/: TelescopeClient.cpp  TelescopeClient.hpp  TelescopeClientAscom.cpp  TelescopeClientAscom.hpp  TelescopeClientDirectLx200.cpp  TelescopeClientDirectLx200.hpp  TelescopeClientDirectNexStar.cpp  TelescopeClientDirectNexStar.hpp  TelescopeClientDirectServoCat.cpp  TelescopeClientDirectServoCat.hpp  TelescopeClientDirectUltima2000.cpp  TelescopeClientDirectUltima2000.hpp  TelescopeClientDummy.cpp  TelescopeClientDummy.hpp  TelescopeClientIndi.cpp  TelescopeClientIndi.hpp  TelescopeClientIndiLocal.cpp  TelescopeClientIndiLocal.hpp  TelescopeClientIndiPointer.cpp  TelescopeClientIndiPointer.hpp  TelescopeClientIndiTcp.cpp  TelescopeClientIndiTcp.hpp  TelescopeClientTCP.cpp  TelescopeClientTCP.hpp  TelescopeClientTcp.cpp  TelescopeClientTcp.hpp
plugins/TelescopeControl/src/gui/: AscomDeviceWidget.cpp  AscomDeviceWidget.hpp  ConfigurationWindow.cpp  ConfigurationWindow.hpp  CoordinatesWidget.cpp  CoordinatesWidget.hpp  DeviceControlPanel.cpp  DeviceControlPanel.hpp  FovCirclesWidget.cpp  FovCirclesWidget.hpp  IndiBlobPropertyWidget.cpp  IndiBlobPropertyWidget.hpp  IndiDeviceWidget.cpp  IndiDeviceWidget.hpp  IndiGroupWidget.cpp  IndiGroupWidget.hpp  IndiLightPropertyWidget.cpp  IndiLightPropertyWidget.hpp  IndiNumberPropertyWidget.cpp  IndiNumberPropertyWidget.hpp  IndiPropertyWidget.hpp  IndiStateWidget.cpp  IndiStateWidget.hpp  IndiSwitchPropertyWidget.cpp  IndiSwitchPropertyWidget.hpp  IndiTextPropertyWidget.cpp  IndiTextPropertyWidget.hpp  SlewDialog.cpp  SlewDialog.hpp  SlewWindow.cpp  SlewWindow.hpp  StelDeviceWidget.cpp  StelDeviceWidget.hpp  StelDeviceWidget.ui  StelDialogTelescopeControl.cpp  StelDialogTelescopeControl.hpp  TelescopeControlConfigurationWindow.cpp  TelescopeControlConfigurationWindow.hpp  TelescopeDialog.hpp  TelescopePropertiesWindow.cpp  (+7 more)
plugins/TelescopeControl/src/indi/: Indi.cpp  Indi.hpp  IndiClient.cpp  IndiClient.hpp  IndiDevice.cpp  IndiDevice.hpp  IndiElement.cpp  IndiElement.hpp  IndiProperty.cpp  IndiProperty.hpp  IndiServices.cpp  IndiServices.hpp  IndiTypes.hpp
plugins/TelescopeControl/src/servers/: Connection.cpp  Connection.hpp  LogFile.hpp  Lx200Command.cpp  Lx200Command.hpp  Lx200Connection.cpp  Lx200Connection.hpp  NexStarCommand.hpp  NexStarConnection.cpp  NexStarConnection.hpp  SerialPort.cpp  SerialPort.hpp  SerialPortUltima2000.cpp  SerialPortUltima2000.hpp  Server.cpp  Server.hpp  ServoCatCommand.cpp  ServoCatCommand.hpp  ServoCatConnection.cpp  ServoCatConnection.hpp  Socket.cpp  Socket.hpp  Ultima2000Command.cpp  Ultima2000Command.hpp  Ultima2000Connection.cpp  Ultima2000Connection.hpp
plugins/TelescopeControl/src/tests/: testINDI.cpp  testINDI.hpp
po/stellarium/: POTFILES.in  stellarium.pot
po/stellarium-skycultures/: nan.po  sr.po
src/: CMakeLists.txt  StelMainGraphicsView.cpp  StelMainGraphicsView.hpp  StelMainView.cpp
src/core/: Aberration.cpp  Aberration.hpp  StelCore.cpp  StelObject.hpp  StelPainter.cpp  StelPainter.hpp  StelSkyDrawer.cpp  StelSkyDrawer.hpp  StelTexture.cpp
src/core/modules/: Atmosphere.cpp  Atmosphere.hpp  Comet.cpp  Comet.hpp  Constellation.hpp  ConstellationMgr.cpp  Landscape.cpp  Landscape.hpp  LandscapeMgr.cpp  LandscapeMgr.hpp  MinorPlanet.cpp  MinorPlanet.hpp  Nebula.cpp  Nebula.hpp  NebulaMgr.cpp  NebulaMgr.hpp  Orbit.cpp  Orbit.hpp  Planet.cpp  Planet.hpp  Skybright.hpp  Skylight.hpp  SolarSystem.cpp  SolarSystem.hpp  StarMgr.cpp  StarMgr.hpp
src/core/planetsephems/: EphemWrapper.cpp  EphemWrapper.hpp  aberration.c  aberration.h  pluto.c  sidereal_time.c
src/core/renderer/: StelQGLRenderer.cpp  StelQGLRenderer.hpp  StelRenderer.hpp
src/gui/: AtmosphereDialog.cpp  AtmosphereDialog.hpp  ConfigurationDialog.cpp  ConfigurationDialog.hpp  DateTimeDialog.cpp  HelpDialog.cpp  LocationDialog.cpp  LocationDialog.hpp  SearchDialog.cpp  ShortcutsDialog.cpp  ShortcutsDialog.hpp  StelDialog.cpp  StelDialog.hpp  ViewDialog.cpp  ViewDialog.hpp  atmosphereDialog.ui  viewDialog.ui
src/tests/: testAberration.cpp  testAberration.hpp
textures/: CMakeLists.txt
